--- a/ClinicaSite/Pages/Login.razor
+++ b/ClinicaSite/Pages/Login.razor
@@ -9,9 +9,9 @@
 		</div>
 
 		<div>
-			<label for="username" class="visually-hidden">Usuario</label>
+			<label for="username" class="visually-hidden">Clinica</label>
 			<div>
-				<InputText id="username" class="form-input-text" @bind-Value="model.Username" placeholder="Usuario" />
+				<InputText id="username" class="form-input-text" @bind-Value="model.Username" placeholder="Clinica" />
 			</div>
 		</div>
 
@@ -62,7 +62,7 @@
 		}
 		else
 		{
-			authenticationErrorText = "Usuario ou senha incorretos";
+			authenticationErrorText = "Clinica ou senha incorretos";
 			showAuthenticationError = true;
 		}
 	}
