--- a/ClinicaSite/Pages/Register.razor
+++ b/ClinicaSite/Pages/Register.razor
@@ -9,9 +9,9 @@
 		</div>
 
 		<div>
-			<label for="username" class="visually-hidden">Usuario</label>
+			<label for="username" class="visually-hidden">Clinica</label>
 			<div>
-				<InputText id="username" class="form-input-text" @bind-Value="model.Username" placeholder="Usuario" />
+				<InputText id="username" class="form-input-text" @bind-Value="model.Username" placeholder="Clinica" />
 			</div>
 		</div>
 
@@ -43,7 +43,7 @@
 	private RegistrationModel model = new();
 
 	private string registrationMessage = "";
-	private string messageWhenRegistrationIsSuccessfull = "Usuario registrado com sucesso";
+	private string messageWhenRegistrationIsSuccessfull = "Clinica registrada com sucesso";
 
 	private async Task ExecuteRegister()
 	{
