--- a/ClinicaSite/Pages/Expiration.razor
+++ b/ClinicaSite/Pages/Expiration.razor
@@ -5,8 +5,8 @@
 	Sua sessão expirou
 </div>
 
-<div class="text-center my-2">
-	<a href="/login" class="bg-primary">
+<div class="text-center my-4">
+	<a href="/login" class="index-button">
 		Fazer login
 	</a>
 </div>
