Historico Consulta Add

--- a/ClinicaSite/Pages/Agendamento.razor
+++ b/ClinicaSite/Pages/Agendamento.razor
@@ -120,6 +120,11 @@
             navManager.NavigateTo("/");
         }
 
+        if (Paciente!.ClinicaId != LoggedInUserId)
+        {
+            navManager.NavigateTo("/");
+        }
+
         ConsultasRegistradas = await consultaService.GetConsultasByPacienteId(LoggedInUserId, Paciente!.Id);
 
         VerifiyForActiveConsulta();
