--- a/ClinicaSite/wwwroot/css/app.css
+++ b/ClinicaSite/wwwroot/css/app.css
@@ -297,6 +297,7 @@
     font-weight: bold;
     text-decoration: none;
     border-color: transparent;
+    margin: 0 3px;
 }
 
 .index-button:hover {
@@ -431,7 +432,8 @@
 
 .paciente-details-options-div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     margin: 30px 0;
 }
 
@@ -466,7 +468,21 @@
 
 /* Historico Consultas */
 
-.historico-consultas-box{
+.historico-consultas-label {
     text-align: center;
-    border: solid #000
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.historico-consultas-box {
+    text-align: center;
+    border-bottom: solid #000;
+    padding: 10px 0;
+    font-size: 20px;
+    background-color: #ECECEC
+}
+
+#historico-consultas-button {
+    padding: 16px;
 }
