--- a/ClinicaSite/Pages/PacienteDetails.razor
+++ b/ClinicaSite/Pages/PacienteDetails.razor
@@ -122,7 +122,7 @@
 	@if (showHistoricoConsultas)
 	{
 		<div class="my-4">
-			<HistoricoConsulta PacienteId="@PacienteId" />
+			<HistoricoConsultaPaciente PacienteId="@PacienteId" />
 		</div>
 	}
 
