--- a/ClinicaSite/Pages/Agendamento.razor
+++ b/ClinicaSite/Pages/Agendamento.razor
@@ -182,6 +182,8 @@
 
         Consulta.Data = Consulta.Data.AddHours(hora);
         Consulta.Data = Consulta.Data.AddMinutes(minutos);
+        Consulta.PacienteCel = Paciente!.Cel;
+        Consulta.PacienteNome = $"{Paciente.Nome} {Paciente.Sobrenome}";
         Consulta.ClinicaId = LoggedInUserId;
         Consulta.PacienteId = Paciente!.Id;
     }
