Body sem margen (article substituido por div) - Barra separando botoes index das paginas

--- a/ClinicaSite/Shared/MainLayout.razor
+++ b/ClinicaSite/Shared/MainLayout.razor
@@ -27,8 +27,8 @@
                 </AuthorizeView>
             </div>
         </navbar>
-        <article>
+        <div>
             @Body
-        </article>
+        </div>
     </main>
 </div>
