--- a/ClinicaSite/Pages/ConsultasClinica.razor
+++ b/ClinicaSite/Pages/ConsultasClinica.razor
@@ -67,19 +67,45 @@
 
 <Virtualize Items="Consultas" Context="consulta" OverscanCount="20">
 	<div class="historico-consultas-box">
-		<div class="d-flex justify-content-center mb-2">
-			<div class="fw-bold mx-2">
-				@consulta.PacienteNome
+		<div>
+			<div class="d-flex justify-content-center mb-2">
+				<div class="fw-bold mx-2">
+					@consulta.PacienteNome
+				</div>
+				<div class="fw-bold mx-2">
+					@consulta.PacienteCel
+				</div>
 			</div>
-			<div class="fw-bold mx-2">
-				@consulta.PacienteCel
+			<div>
+				@consulta.Data
+			</div>
+			<div>
+				@consulta.Descricao
 			</div>
 		</div>
 		<div>
-			@consulta.Data
-		</div>
-		<div>
-			@consulta.Descricao
+			<div class="my-2">
+				<button @onclick="() => ToggleShowDeleteConfirmation(consulta.Id)"
+					class="btn btn-danger">
+					Excluir
+				</button>
+			</div>
+			<div>
+				@if (showDeleteConfirmation.ContainsKey(consulta.Id) && showDeleteConfirmation[consulta.Id])
+				{
+					<div class="text-center my-4">
+						<div class="h4 fw-bold">
+							Tem certeza que deseja deletar essa consulta?
+						</div>
+						<div>
+							<button class="btn btn-warning px-4 py-2" 
+								@onclick="async () => await DeleteConsultaConfirmation(consulta.Id)">
+								Sim
+							</button>
+						</div>
+					</div>
+				}
+			</div>
 		</div>
 	</div>
 </Virtualize>
@@ -91,6 +117,7 @@
 	private string consultaSearchType = "Ativas";
 	private DateTime firstDate = DateTime.Today;
 	private DateTime secondDate = DateTime.Today.AddMonths(1);
+	private Dictionary<Guid, bool> showDeleteConfirmation = new Dictionary<Guid, bool>();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -138,6 +165,30 @@
 			.OrderBy(x => x.Data).ToList();
 
 			consultaSearchType = "Data";
+		}
+	}
+
+	private async Task DeleteConsultaConfirmation(Guid consultaId)
+	{
+		await consultaService.DeleteConsulta(consultaId);
+
+		var consulta = Consultas!.FirstOrDefault(x => x.Id == consultaId);
+
+		if (consulta is not null)
+		{
+			Consultas!.Remove(consulta);
+		}
+	}
+
+	private void ToggleShowDeleteConfirmation(Guid consultaId)
+	{
+		if (showDeleteConfirmation.ContainsKey(consultaId))
+		{
+			showDeleteConfirmation[consultaId] = !showDeleteConfirmation[consultaId];
+		}
+		else
+		{
+			showDeleteConfirmation[consultaId] = true;
 		}
 	}
 }
